# rag-portfolio

./: .gitignore  BUILD_COMPLETE.md  DEPLOYMENT.md  Dockerfile  FRONTEND_MARKDOWN_SETUP.md  OPTIMIZATION.md  README.md  SPECIFICITY_FIX.md  STREAMING_EXAMPLE.md  UPDATED.md  config.py  data_loader.py  embeddings.py  llm.py  main.py  pyproject.toml  rag_chain.py  render.yaml  test_truncation.py
data/: faq.md  mindset.md  projects.json  resume.txt  resume_new.txt
